--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
-  "name": "md-localfirst",
+  "name": "sampletauri",
   "private": true,
   "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
+    "tauri": "tauri",
     "tauri:dev": "tauri dev",
     "tauri:build": "tauri build"
   },
   "dependencies": {
-    "vue": "^3.5.28",
-    "@editorjs/editorjs": "^2.31.3"
+    "@editorjs/editorjs": "^2.31.3",
+    "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-opener": "^2",
+    "vue": "^3.5.13"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^2.10.0",
+    "@tauri-apps/cli": "^2",
     "@vitejs/plugin-vue": "^5.2.1",
-    "vite": "^7.3.1",
-    "typescript": "^5.7.3"
+    "typescript": "~5.6.2",
+    "vite": "^6.0.3",
+    "vue-tsc": "^3.2.5"
   }
 }
