--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,22 +1,22 @@
 [package]
-name = "md-localfirst"
+name = "meditor"
 version = "0.1.0"
 description = "Local-first markdown editor"
 authors = ["you"]
 edition = "2021"
 
 [lib]
-name = "md_localfirst"
+name = "meditor_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
-tauri-build = { version = "2.10", features = [] }
+tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "2.10", features = [] }
+tauri = { version = "2", features = [] }
+tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 thiserror = "1"
 rusqlite = { version = "0.31", features = ["bundled"] }
 directories = "5"
-
