--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,26 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
+    "target": "ES2020",
     "useDefineForClassFields": true,
     "module": "ESNext",
-    "moduleResolution": "Bundler",
-    "strict": true,
-    "jsx": "preserve",
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "resolveJsonModule": true,
+    "allowImportingTsExtensions": true,
+    "moduleResolution": "bundler",
     "isolatedModules": true,
     "skipLibCheck": true,
-    "types": []
+    "noEmit": true,
+    "jsx": "preserve",
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true
   },
   "include": [
     "src/**/*.ts",
     "src/**/*.vue",
-    "vite.config.ts"
-  ]
+    "src/**/*.d.ts",
+    "src/**/*.tsx"
+  ],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
