--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@heroicons/vue": "^2.2.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
+    "mermaid": "^11.12.3",
     "vue": "^3.5.13"
   },
   "devDependencies": {
