--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
     "@tiptap/extension-code-block": "^3.20.0",
+    "@tiptap/extension-code-block-lowlight": "^3.20.0",
     "@tiptap/extension-drag-handle-vue-3": "^3.20.0",
     "@tiptap/extension-link": "^3.20.0",
     "@tiptap/extension-list": "^3.20.0",
@@ -31,6 +32,7 @@
     "@tiptap/starter-kit": "^3.20.0",
     "@tiptap/suggestion": "^3.20.0",
     "@tiptap/vue-3": "^3.20.0",
+    "lowlight": "^3.3.0",
     "mermaid": "^11.12.3",
     "vue": "^3.5.13"
   },
